fix: hero spacing

--- a/styles/pages/_index-hero.scss
+++ b/styles/pages/_index-hero.scss
@@ -18,34 +18,34 @@
 
   &_pretext {
     text-transform: uppercase;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 400;
 
     padding-left: .3rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1vh;
   }
 
   &_title {
-    max-width: 40%;
+    max-width: 35%;
     text-transform: lowercase;
-    font-size: 4rem;
+    font-size: 3.2rem;
     line-height: 1;
     font-weight: 800;
 
-    padding-left: .3rem;
-    margin-bottom: 8rem;
+    margin-bottom: 6vh;
   }
 
   &_date {
+    padding-left: .3rem;
     text-transform: uppercase;
     font-weight: 300;
-    font-size: 2.4rem;
+    font-size: 2rem;
   }
 }
 
 .OrganisedBy {
   width: 35%;
-  margin-top: 12rem;
+  margin-top: 9vh;
 
   &_pretext {
     font-size: 1.6rem;
